Vinay, Alekhya | MOBN - 815 | Notes alignment fix

--- a/ui/react-components/components/AppointmentNotes/AppointmentNotes.module.scss
+++ b/ui/react-components/components/AppointmentNotes/AppointmentNotes.module.scss
@@ -1,5 +1,5 @@
 .notes {
-  height: 254px;
+  height: calc(100% - 104px);
   width: calc(100% - 20px);
   padding: 10px;
   border-radius: 4px;
